// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render ListEntry correctly 1`] = `
<div
  className="individualPic"
>
  <img
    className="img"
    src="path0.jpg"
  />
  <p
    className="location"
  >
    house
     · 
    Berlin
  </p>
  <p
    className="description"
  >
    sunny0
  </p>
  <p
    className="price"
  >
    $
    250
     per night
  </p>
  <div
    className="starsOuter"
  >
    <div
      className="starsInner"
      style={
        Object {
          "width": "22%",
        }
      }
    />
  </div>
  <span
    className="votes"
  >
    4
  </span>
</div>
`;

exports[`render ListOfHomes correctly 1`] = `
<div>
  <div
    className="scrolls"
  >
    <button
      className="leftScroll"
      onClick={[Function]}
      style={
        Object {
          "visibility": "hidden",
        }
      }
    >
      &lt;
    </button>
  </div>
  <div
    className="flex-container"
  >
    <div
      className="individualPic"
    >
      <img
        className="img"
        src="path0.jpg"
      />
      <p
        className="location"
      >
        house
         · 
        Berlin
      </p>
      <p
        className="description"
      >
        sunny0
      </p>
      <p
        className="price"
      >
        $
        250
         per night
      </p>
      <div
        className="starsOuter"
      >
        <div
          className="starsInner"
          style={
            Object {
              "width": "22%",
            }
          }
        />
      </div>
      <span
        className="votes"
      >
        4
      </span>
    </div>
    <div
      className="individualPic"
    >
      <img
        className="img"
        src="path1.jpg"
      />
      <p
        className="location"
      >
        house
         · 
        Berlin
      </p>
      <p
        className="description"
      >
        sunny1
      </p>
      <p
        className="price"
      >
        $
        251
         per night
      </p>
      <div
        className="starsOuter"
      >
        <div
          className="starsInner"
          style={
            Object {
              "width": "32%",
            }
          }
        />
      </div>
      <span
        className="votes"
      >
        4
      </span>
    </div>
    <button
      className="rightScroll"
      onClick={[Function]}
      style={
        Object {
          "visibility": "visible",
        }
      }
    >
      &gt;
    </button>
  </div>
</div>
`;

exports[`render StarRating correctly 1`] = `
<div
  className="starsOuter"
>
  <div
    className="starsInner"
    style={
      Object {
        "width": "22%",
      }
    }
  />
</div>
`;

exports[`simulate button click 1`] = `"<div class=\\"individualPic\\"><img class=\\"img\\" src=\\"path0.jpg\\"/><p class=\\"location\\">house · Berlin</p><p class=\\"description\\">sunny0</p><p class=\\"price\\">$250 per night</p><div class=\\"starsOuter\\"><div class=\\"starsInner\\" style=\\"width:22%\\"></div></div><span class=\\"votes\\">4</span></div>"`;

exports[`simulate button click 2`] = `"<div class=\\"individualPic\\"><img class=\\"img\\" src=\\"path1.jpg\\"/><p class=\\"location\\">house · Berlin</p><p class=\\"description\\">sunny1</p><p class=\\"price\\">$251 per night</p><div class=\\"starsOuter\\"><div class=\\"starsInner\\" style=\\"width:32%\\"></div></div><span class=\\"votes\\">4</span></div>"`;

exports[`simulate button click 3`] = `"<div class=\\"individualPic\\"><img class=\\"img\\" src=\\"path0.jpg\\"/><p class=\\"location\\">house · Berlin</p><p class=\\"description\\">sunny0</p><p class=\\"price\\">$250 per night</p><div class=\\"starsOuter\\"><div class=\\"starsInner\\" style=\\"width:22%\\"></div></div><span class=\\"votes\\">4</span></div>"`;
